--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./nou.svg">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="./nou.svg" type="image/svg+xml">
+    <link rel="manifest" href="static/manifest.json">
+
+    <!-- IOSでアイコンを表示されるために以下追加 -->
+    <link rel="manifest" href="manifest.webmanifest" />
+    <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
+    integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
+    crossorigin="anonymous"></script>
+    <title>GreatBrain</title>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
