--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./nou.svg">
     <link rel="icon" href="./nou.svg" type="image/svg+xml">
-    <link rel="manifest" href="static/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
     <!-- IOSでアイコンを表示されるために以下追加 -->
     <link rel="manifest" href="manifest.webmanifest" />
