--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <title>GreatBrain</title>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
+    <meta name="theme-color" content="rgb(173, 132, 102)">
   </head>
   <body>
     <noscript>
