--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- IOSでアイコンを表示されるために以下追加 -->
-    <link rel="manifest" href="manifest.webmanifest" />
+    <!-- <link rel="manifest" href="manifest.webmanifest" />
     <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
     integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
     <title>GreatBrain</title>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
