--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./nou.svg">
     <link rel="icon" href="./nou.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./img/icons/apple-touch-icon-180x180-precomposed.png" type="image/png">
-    <link rel="icon" href="icon-192x192.png" type="image/png">
+    <!-- <link rel="icon" href="icon-192x192.png" type="image/png"> -->
 
     <link rel="manifest" href="manifest.json">
     <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.8/pwacompat.min.js"
