--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./nou.svg">
     <link rel="icon" href="./nou.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="./img/icons/apple-touch-icon-180x180-precomposed.png" type="image/png">
+    <!-- <link rel="apple-touch-icon" href="./img/icons/apple-touch-icon-180x180-precomposed.png" type="image/png"> -->
     <!-- <link rel="icon" href="icon-192x192.png" type="image/png"> -->
 
     <link rel="manifest" href="manifest.json">
