--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./nou.svg">
     <link rel="icon" href="./nou.svg" type="image/svg+xml">
-    <!-- <link rel="apple-touch-icon" href="./img/icons/apple-touch-icon-180x180-precomposed.png" type="image/png"> -->
-    <!-- <link rel="icon" href="icon-192x192.png" type="image/png"> -->
+    <link rel="apple-touch-icon" href="./img/icons/apple-touch-icon-180x180-precomposed.png" type="image/png">
+    <link rel="icon" href="icon-192x192.png" type="image/png">
 
     <link rel="manifest" href="manifest.json">
-    <!-- <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.8/pwacompat.min.js"
+    <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.8/pwacompat.min.js"
       integrity="sha384-uONtBTCBzHKF84F6XvyC8S0gL8HTkAPeCyBNvfLfsqHh+Kd6s/kaS4BdmNQ5ktp1"
-      crossorigin="anonymous"></script> -->
+      crossorigin="anonymous"></script>
     <title>GreatBrain</title>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
