--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="icon-192x192.png" type="image/png">
 
     <link rel="manifest" href="manifest.json">
-    <link rel="manifest" href="manifest.webmanifest" />
+    <!-- <link rel="manifest" href="manifest.webmanifest" /> -->
     <script async src="https://cdn.jsdelivr.net/npm/pwacompat@2.0.6/pwacompat.min.js"
     integrity="sha384-GOaSLecPIMCJksN83HLuYf9FToOiQ2Df0+0ntv7ey8zjUHESXhthwvq9hXAZTifA"
     crossorigin="anonymous"></script>
